--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,37 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./scss/style.css">
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Leaderboard</h1>
+    <div class="flex">
+      <div>
+        <div>
+          <h3>Recent scores</h3>
+          <button class="refresh-btn">Refresh</button>
+        </div>
+        <ul>
+          <li>Name: 100</li>
+          <li>Name: 100</li>
+          <li>Name: 100</li>
+          <li>Name: 100</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Add your score</h3>
+        <form action="">
+          <input type="text" placeholder="Your name" /><br>
+          <input type="text" placeholder="Your score" /><br>
+          <button type="">Submit</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
