--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./scss/style.css">
     <title>Document</title>
   </head>
   <body>
@@ -15,21 +14,17 @@
       <div>
         <div>
           <h3>Recent scores</h3>
-          <button class="refresh-btn">Refresh</button>
+          <button type="button" class="refresh-btn">Refresh</button>
         </div>
-        <ul>
-          <li>Name: 100</li>
-          <li>Name: 100</li>
-          <li>Name: 100</li>
-          <li>Name: 100</li>
+        <ul class="leader-board">
         </ul>
       </div>
       <div>
         <h3>Add your score</h3>
-        <form action="">
+        <form action="#">
           <input type="text" placeholder="Your name" /><br>
           <input type="text" placeholder="Your score" /><br>
-          <button type="">Submit</button>
+          <button type="submit">Submit</button>
         </form>
       </div>
     </div>
