--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>LeaderBoard</title>
   </head>
   <body>
-    <h1>Leaderboard</h1>
+    <div id="root"></div>
     <div class="flex">
       <div>
         <div>
@@ -28,5 +28,6 @@
         </form>
       </div>
     </div>
+    <script type='module' src="/src/js/index.js"></script>
   </body>
 </html>
