--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>LeaderBoard</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>LeaderBoard</h1>
     <div class="flex">
       <div>
         <div>
@@ -28,6 +28,5 @@
         </form>
       </div>
     </div>
-    <script type='module' src="/src/js/index.js"></script>
   </body>
 </html>
