Create addscore and adddataapi functions

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/scss/style.css">
     <title>LeaderBoard</title>
   </head>
   <body>
@@ -14,7 +15,7 @@
       <div>
         <div>
           <h3>Recent scores</h3>
-          <button type="button" class="refresh-btn">Refresh</button>
+          <button type="button" id="refresh-btn">Refresh</button>
         </div>
         <ul class="leader-board">
         </ul>
@@ -22,11 +23,12 @@
       <div>
         <h3>Add your score</h3>
         <form action="#">
-          <input type="text" placeholder="Your name" /><br>
-          <input type="text" placeholder="Your score" /><br>
-          <button type="submit">Submit</button>
+          <input type="text" placeholder="Your name" id="name"/><br>
+          <input type="text" placeholder="Your score" id="score"/><br>
+          <button type="submit" id="submit-btn">Submit</button>
         </form>
       </div>
     </div>
+    <script type='module' src="js/index.js"></script>
   </body>
 </html>
